// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button changes the class on hover 1`] = `
<button
  className="one, two, mouseOut"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  this is Button
</button>
`;

exports[`Button changes the class on hover 2`] = `
<button
  className="one, two, hovered"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  this is Button
</button>
`;

exports[`Button changes the class on hover 3`] = `
<button
  className="one, two, mouseOut"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  this is Button
</button>
`;
